<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/tab_buscar" />
    <item
        android:id="@+id/nav_playlists"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/tab_playlists" />
    <item
        android:id="@+id/nav_reproductor"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/tab_reproductor" />
    <item
        android:id="@+id/nav_anadir"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/tab_anadir" />
    <item
        android:id="@+id/nav_ajustes"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/tab_ajustes" />
</menu>
